--- a/calculator.html
+++ b/calculator.html
@@ -7,11 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <title>Adjustment Calculator</title>
-    <script>
-      function calculate() {
-        document.getElementById('systems').innerHTML = "Full thickener hit: 0.5%";
-      }
-    </script>
+
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
@@ -37,32 +33,37 @@
       <br>
       <form>
         <h3>Adjustments for Waterborne Systems</h3>
-        <div><label for="lines">Gallons in Lines:</label><br>
-          <input type="number" id="lines" name="lines" value="122" min="15" max="122"><br>
+        <div>
+          <label for="lines">Gallons in Lines:</label><br>
+          <input type="radio" id="15" name="lines" value="15">
+          <label for="15">15</label><br>
+          <input type="radio" id="22" name="lines" value="22">
+          <label for="22">22</label><br>
+          <input type="radio" id="122" name="lines" value="122">
+          <label for="122">122</label><br>
+          <br>
           <label for="tank">Gallons in Tank:</label><br>
-          <input type="number" id="tank" name="tank" value="70" min="20" max="90"><br><br>
-          <button type="button" onclick="calculate()">Calculate</button>
+          <input type="number" id="tank" name="tank" min="20" max="140" step="1" value="80"><br><br>
+          <button type="button" onclick="systemCalculate()">Calculate</button>
           <button type="button" onclick="systemReset()">Reset</button>
         </div>
       </form>
-      <br>
-
-
 
       <p id="systems"></p>
-      
+      <br>
       <br>
 
       <form>
         <h3>Adjustments for Totes</h3>
         <div>
-          <label for="lines">Gallons in Tote:</label><br>
-          <input type="number" id="lines" name="lines" value="300" min="0" max="300"><br><br>
-          <button type="button" onclick="calculate()">Calculate</button>
+          <label for="tote">Gallons in Tote:</label><br>
+          <input type="number" id="tote" name="tote" value="300" min="0" max="300"><br><br>
+          <button type="button" onclick="toteCalculate()">Calculate</button>
           <button type="button" onclick="toteReset()">Reset</button><br>
           <br>
         </div>
       </form>
+      <br><br>
 
       <div>
         Full thickener hit: 0.5%<br>
@@ -70,7 +71,6 @@
         Full amine hit: 0.05%<br>
         Half amine hit: 0.025%<br>
       </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <script src="./main.js"></script>
 </body>
 </html>
