--- a/calculator.html
+++ b/calculator.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <title>Adjustment Calculator</title>
+    <title>Mark - Adjustment Calculator</title>
 
 </head>
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar sticky-top navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navigation</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,28 +28,21 @@
           </div>
         </div>
       </nav>
-      <h1>Adjustment Calculator</h1>
-      
       <br>
       <form>
         <h3>Adjustments for Waterborne Systems</h3>
         <div>
           <label for="lines">Gallons in Lines:</label><br>
-          <input type="radio" id="15" name="lines" value="15">
-          <label for="15">15</label><br>
-          <input type="radio" id="22" name="lines" value="22">
-          <label for="22">22</label><br>
-          <input type="radio" id="122" name="lines" value="122">
-          <label for="122">122</label><br>
+          <input type="number" id="n1" name="lines" min="20" max="140" value="122" required>
           <br>
           <label for="tank">Gallons in Tank:</label><br>
-          <input type="number" id="tank" name="tank" min="20" max="140" step="1" value="80"><br><br>
-          <button type="button" onclick="systemCalculate()">Calculate</button>
-          <button type="button" onclick="systemReset()">Reset</button>
+          <input type="number" id="n2" name="tank" min="20" max="140" step="1" value="80" required><br><br>
+          <button type="button" onclick="systemCalculate()" class="btn btn-primary">Calculate</button>
+          <button type="button" onclick="systemReset()" class="btn btn-primary">Clear</button>
         </div>
       </form>
-
-      <p id="systems"></p>
+      <br>
+      <div id="systems"></div>
       <br>
       <br>
 
@@ -58,19 +51,21 @@
         <div>
           <label for="tote">Gallons in Tote:</label><br>
           <input type="number" id="tote" name="tote" value="300" min="0" max="300"><br><br>
-          <button type="button" onclick="toteCalculate()">Calculate</button>
-          <button type="button" onclick="toteReset()">Reset</button><br>
-          <br>
+          <button type="button" onclick="toteCalculate()" class="btn btn-primary">Calculate</button>
+          <button type="button" onclick="toteReset()" class="btn btn-primary">Clear</button><br>
         </div>
       </form>
-      <br><br>
+      <br>
+      <div id="toteDiv"></div>
 
-      <div>
+      <!-- <div>
         Full thickener hit: 0.5%<br>
         Half thickener hit: 0.25%<br>
         Full amine hit: 0.05%<br>
         Half amine hit: 0.025%<br>
-      </div>
-      <script src="./main.js"></script>
+      </div> -->
+
+      <script src="/main.js"></script>
+
 </body>
 </html>
